Dynegy/src/objects/Billing_Group_Ldc__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Group</label>
        <referenceTo>Billing_Group__c</referenceTo>
        <relationshipLabel>Billing Group Ldc</relationshipLabel>
        <relationshipName>Billing_Group_Ldc</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date__c</fullName>
        <label>Billing Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Billing_Stop_Date__c</fullName>
        <label>Billing Stop Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LDC_Account_Number__c</fullName>
        <formula>LDC_Account__r.LDC_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LDC Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>LDC Account</label>
        <referenceTo>LDC_Account__c</referenceTo>
        <relationshipLabel>Billing Group Ldc</relationshipLabel>
        <relationshipName>Billing_Group_Ldc</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LDC_Billing_Group__c</fullName>
        <formula>LDC_Account__r.Billing_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LDC Billing Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pseudo_Contract__c</fullName>
        <formula>Billing_Group__r.Pseudo_Contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pseudo Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <label>Billing Group Ldc</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BGLDC-{0000000}</displayFormat>
        <label>Billing Group Ldc Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Group Ldcs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>